# ColorfulLands

./: LICENSE.md  README.md
1_get_basic_lands/: get_basic_lands.py
2_count_pixels/: count_pixels.py
2_count_pixels/data/: forest.json  island.json  mountain.json  plains.json  swamp.json
3_order_lands_by_color/: order_lands_by_color.py
3_order_lands_by_color/data/: forest_with_pixel_counts.json  island_with_pixel_counts.json  mountain_with_pixel_counts.json  plains_with_pixel_counts.json  (+1 more)
4_ordered_lands/: ordered_black_forest.csv  ordered_black_island.csv  ordered_black_mountain.csv  ordered_black_plains.csv  ordered_black_swamp.csv  ordered_blue_forest.csv  ordered_blue_island.csv  ordered_blue_mountain.csv  ordered_blue_plains.csv  ordered_blue_swamp.csv  ordered_brown_forest.csv  ordered_brown_island.csv  ordered_brown_mountain.csv  ordered_brown_plains.csv  ordered_brown_swamp.csv  ordered_green_forest.csv  ordered_green_island.csv  ordered_green_mountain.csv  ordered_green_plains.csv  ordered_green_swamp.csv  ordered_orange_forest.csv  ordered_orange_island.csv  ordered_orange_mountain.csv  ordered_orange_plains.csv  ordered_orange_swamp.csv  ordered_pink_forest.csv  ordered_pink_island.csv  ordered_pink_mountain.csv  ordered_pink_plains.csv  ordered_pink_swamp.csv  ordered_purple_forest.csv  ordered_purple_island.csv  ordered_purple_mountain.csv  ordered_purple_plains.csv  ordered_purple_swamp.csv  ordered_red_forest.csv  ordered_red_island.csv  ordered_red_mountain.csv  ordered_red_plains.csv  ordered_red_swamp.csv  (+10 more)
app/: poetry.toml  pyproject.toml
